Mon Oct 27 13:40:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_sweep_rest): sweep rest pages regardless of whether
	  lazy sweep is enabled or not.  based on the patch by Masahiro
	  Ide at [ruby-dev:48706].  [Bug #10431]

Mon Oct 27 11:18:32 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_process.rb (test_deadlock_by_signal_at_forking):
	  reduce garbage during forks

Sun Oct 25 12:26:26 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* template/insns.inc.tmpl, insns_info.inc.tmpl, known_errors.inc.tmpl,
	  minsns.inc.tmpl: fixed path of generating script.

Sun Oct 26 12:24:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/ripper/lib/ripper/sexp.rb (Ripper.sexp, Ripper.sexp_raw):
	  return nil on error.  [ruby-dev:48678] [Bug #10405]

Sun Oct 25 11:24:24 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* string.c: improved comment.

Sun Oct 26 07:40:11 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_val2variant, ole_invoke): refactoring.
	  use ole_variant2variant to convert WIN32OLE_VARIANT object to
	  VARIANT object.

	* ext/win32ole/win32ole_variant.c: refactoring. add
	  ole_variant2variant.
	* ext/win32ole/win32ole_variant.h: ditto.

Sat Oct 25 22:28:17 2014  Tanaka Akira  <akr@fsij.org>

	* io.c (io_binwrite_string): Test writev() failure.

Sat Oct 25 20:19:19 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: added test_us_ascii.

Sat Oct 25 20:09:09 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/normalize.rb: added US_ASCII
	  as trivially supported encoding (is always normalized,
	  and may appear mixed in with UTF-8 or other Unicode
	  encodings).

Sat Oct 25 20:01:01 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: added
	  test_raise_exception_for_non_unicode_encoding.

Sat Oct 25 19:30:30 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: removed unused function.
