@@ -1,3 +1,9 @@
+Mon Oct 27 15:59:26 2014  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c: is_incremental_marking(), will_be_incremental_marking():
+	  use `&&' with GC_ENABLE_INCREMENTAL_MARK intead of using
+	  #if/#else/#endif.
+
 Mon Oct 27 13:40:11 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* gc.c (gc_sweep_rest): sweep rest pages regardless of whether
